# bootloader_upgrade_tool

./: .gitignore  AGENTS.md  IMPLEMENTATION_PLAN.md  README.md  pyproject.toml  read_entry.asm
.ti-check/: read_entry.asm  read_entry.c
docs/: 00_project_overview.md  01_mvp_requirements.md  02_architecture_constraints.md  03_dsp_bootloader_algorithm.md  04_pc_gui_requirements.md  05_simulator_requirements.md  06_device_info_tool.md  07_user_porting_guide.md  08_future_features.md  09_not_in_mvp.md  10_open_questions.md  11_codex_task_list.md  12_mvp_acceptance_criteria.md  13_flash_resident_ram_lib_partition.md  14_communication_protocol.md  15_ti_sci_flash_kernel_reference_guide.md  16_f28377d_flash_operation_codex_guide.md  19_industrial_reliability_deferred_items.md  20_phase_6_7_hardware_test_guide.md  21_gui_dfu_run_test_guide.md  22_mvp_acceptance_checklist.md  23_source_run_release_guide.md  24_windows_portable_packaging_guide.md  25_release_notes_v0.1.0.md  26_protocol_extension_for_reliability.md  27_app_slot_metadata_header_design.md  28_phase_10_2_implementation_plan.md  30_phase_10_2_test_plan.md  31_phase_10_2_regression_requirements.md  32_phase_10_2_regression_evidence.md  33_phase_10_3_ram_load_run_evidence.md  34_phase_10_4_downloaded_flash_service_evidence.md  35_phase_10_5_flash_resident_bootloader_plan.md  36_phase_10_5_d_flash_bootloader_slimming.md  37_phase_10_6_a_boot_status_policy_preview.md  38_phase_10_6_b1_flash_lib_descriptor_last.md  39_phase_10_6_c_rd_auto_boot_closed_loop.md  40_phase_10_7_cpu1_pc_workflow.md  README.md  (+25 more)
dsp/: README.md
(+402 files in other folders)
