[build-system]
requires = ["setuptools>=75"]
build-backend = "setuptools.build_meta"

[project]
name = "dsp28377d-bootloader-upgrade-tool"
version = "0.1.0"
description = "PC-side support package for the DSP28377D bootloader upgrade tool"
readme = "README.md"
requires-python = ">=3.12,<3.13"
dependencies = [
    "PySide6>=6.8,<7",
    "pyserial>=3.5,<4",
]

[project.optional-dependencies]
dev = [
    "pytest>=8,<10",
]
packaging = [
    "pyinstaller>=6,<7",
]

[tool.setuptools]
package-dir = {"" = "pc/src"}

[tool.setuptools.packages.find]
where = ["pc/src"]

[tool.pytest.ini_options]
addopts = "-ra"
testpaths = ["tests"]
pythonpath = ["pc/src"]
